bug fixed create new middleware
